--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,22 @@
-body {}
+/* Это комментарий */
+body {
+  
+}
 
 div {
-  background-color: #00FF00;
+  background-color: #00ff00;
   font-size: 13pt;
   padding: 10px;
   margin: 0;
 }
 
-/* Это комментарий */
 p {
   color: black;
-  font-size: 150%
+  font-size: 150%;
 }
 
 p.p1 {
-  background-color: #FF0000;
+  background-color: #ff0000;
   font-size: 13pt;
   padding: 10px;
   margin: 0;
@@ -62,13 +64,12 @@ h1 {
   font-size: 20px;
 }
 
-/*Чтобы посчитать размер в em, используйте следующую формулу: em = pixels / 16
-*/
+/* Чтобы посчитать размер в em, используйте следующую формулу: em = pixels / 16 */
 h2 {
   font-size: 1.25em;
 }
 
-/* Толщина текста */
+/* Стиль шрифта */
 p.normal {
   font-style: normal;
 }
@@ -77,7 +78,7 @@ p.italic {
   font-style: italic;
 }
 
-/* Oblique(наклонный шрифт) очень похож на курсив, но является менее поддерживаемым. */
+/* Oblique (наклонный шрифт) очень похож на курсив, но является менее поддерживаемым. */
 p.oblique {
   font-style: oblique;
 }
@@ -103,7 +104,7 @@ p.w900 {
   font-weight: 900;
 }
 
-/*font-variant позволяет конвертировать шрифт в маленькие заглавные буквы*/
+/* font-variant позволяет конвертировать шрифт в маленькие заглавные буквы */
 p.normal {
   font-variant: normal;
 }
@@ -116,22 +117,22 @@ p.inherit {
   font-variant: inherit;
 }
 
-/*Текст цвета (название цвета)*/
+/* Текст цвета (название цвета) */
 p.example {
   color: green;
 }
 
-/*Текст цвета с (шестнадцатеричных значений) */
+/* Текст цвета с (шестнадцатеричных значений) */
 p.example1 {
-  color: #0000FF;
+  color: #0000ff;
 }
 
-/*Текст цвета (RGB) */
+/* Текст цвета (RGB) */
 p.example2 {
   color: rgb(255, 0, 0);
 }
 
-/*Горизонтальное расположение текста в элементе*/
+/* Горизонтальное расположение текста в элементе */
 p.left {
   text-align: left;
 }
@@ -144,7 +145,7 @@ p.center {
   text-align: center;
 }
 
-/*Вертикальное положение элемента*/
+/* Вертикальное положение элемента */
 td.top {
   vertical-align: top;
 }
@@ -185,7 +186,7 @@ span.cm {
   vertical-align: -2cm;
 }
 
-/*Декорация текста*/
+/* Декорация текста */
 p.none {
   text-decoration: none;
 }
@@ -206,18 +207,22 @@ p.line-through {
   text-decoration: line-through;
 }
 
-/*Значение blink заставляет текст мигать*/
+/* Значение blink заставляет текст мигать */
 p.blink {
   text-decoration: blink;
 }
 
-/*Свойство text-indent определяет, сколько места по горизонтали должно быть оставлено до начала первой строки текста. Значениями свойства являются length (px, pt, cm, em, и т.д.), %, и inherit. */
+/* Свойство text-indent определяет, сколько места по горизонтали должно быть оставлено до начала первой строки текста.
+Значениями свойства являются length (px, pt, cm, em, и т.д.), %, и inherit. */
 p.indent {
   text-indent: 60px;
 }
 
-/*Свойство text-shadow добавляет к тексту тень.
-Оно принимает четыре значения: первое значение определяет длину тени по оси x (по горизонтали), второе значение определяет длину по оси y (по вертикали), третье значение определяет размытие тени, а четвертое значение определяет цвет.
+/* Свойство text-shadow добавляет к тексту тень.
+Оно принимает четыре значения: первое значение определяет длину тени по оси x (по горизонтали),
+второе значение определяет длину по оси y (по вертикали),
+третье значение определяет размытие тени,
+а четвертое значение определяет цвет.
 */
 p.shadow {
   color: blue;
@@ -243,7 +248,7 @@ p.lowercase {
   text-transform: lowercase;
 }
 
-/*Свойство letter-spacing определяет расстояние между символами в тексте.*/
+/* Свойство letter-spacing определяет расстояние между символами в тексте. */
 p.normal {
   letter-spacing: normal;
 }
@@ -256,14 +261,15 @@ p.negative {
   letter-spacing: -1.5px;
 }
 
-/* Свойство word-spacing определяет расстояние между словами в тексте. px, pt, pc, cm, mm, inches, em, и ex.
-*/
+/* Свойство word-spacing определяет расстояние между словами в тексте.
+px, pt, pc, cm, mm, inches, em, и ex. */
 p.px {
   word-spacing: 30px;
 }
 
-/* Свойство white-space определяет, как будут отображаться пробелы внутри элемента. */
-/* При значении nowrap, текст продолжается на одной линии без переноса строки до следующего тега < br> Текст будет отображаться одной строкой, пока не встретится тег < br/>. */
+/* Свойство white-space определяет, как будут отображаться пробелы внутри элемента.
+При значении nowrap, текст продолжается на одной линии без переноса строки до следующего тега < br>
+Текст будет отображаться одной строкой, пока не встретится тег < br/>. */
 p.nowrap {
   white-space: nowrap;
 }
